# shop_base

./: .env  Cargo.toml  NOTES.md
.claude/: settings.local.json
migrations/2025-11-18-154402-0000_create_items/: down.sql  up.sql
src/: cli.rs  lib.rs  models.rs  schema.rs
