[package]
name = "shop_base"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "shop_cli"
path = "src/cli.rs"

[lib]
name = "shop_db"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
diesel = { version = "2.3.3", features = ["postgres"] }
dotenv = "0.15.0"
failure = "0.1.8"
